# todo-lists

./: domein-n-webapp.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
server/: .gitignore  manage.py  pyproject.toml
server/todo/: admin.py  apps.py  models.py  urls.py  views.py
server/todo/migrations/: 0001_initial.py  0002_alter_todoitem_item_alter_todolist_name.py  0003_alter_todoitem_list.py  0004_profile.py  0005_seed_profile.py  0006_seed_todo.py
server/todo/scripts/: update_profile_xss.sql
server/todo/templates/todo/: base.html  index.html  index.html.jinja  list.html  list.html.jinja  profile.html
server/webapp/: settings.py  urls.py
